:toc: macro
:toclevels: 1
:toc-title:
:icons: font
:imagesdir: assets/images
ifdef::env-github[]
:warning-caption: :warning:
:caution-caption: :fire:
:important-caption: :exclamation:
:note-caption: :paperclip:
:tip-caption: :bulb:
endif::[]

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog]
and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

Template could be found here: link:https://github.com/d4l-data4life/hc-readme-template/blob/main/TEMPLATE_CHANGELOG.adoc[CHANGELOG]

[discrete]
==== Versions
toc::[]

== https://github.com/d4l-data4life/hc-sdk-kmp-integration/compare/v1.15.1...main[Unreleased]

=== Added

=== Changed

* Change GitHub action from self-hosted runner to cloud runner
* Change Android target API from 30 to 31

=== Deprecated

=== Removed

* Remove Chucker dependency

=== Fixed

=== Bumped

* Gradle 6.9.1 -> 7.4.2
* HC SDK KMP 1.9.2 -> 1.16.0
* HC FHIR SDK Java 1.2.1 -> 1.8.0
* HC FHIR Helper 1.4.1 -> 1.9.0
* HC Auth SDK 1.14.0 -> 1.15.0
* HC Util SDK 1.4.1 -> 1.13.0
* Kotlin 1.4.31 -> 1.6.10
* Kotlin Coroutines 1.4.2 -> 1.6.1
* Android Gradle Plugin 4.1.2 -> 7.3.0-beta01
* Android Desugar 1.0.5 -> 1.1.5
* AndroidX Ktx 1.3.1 -> 1.7.0
* AndroidX AppCompat 1.2.0 -> 1.4.1
* AndroidX Browser 1.3.0 -> 1.4.0
* AndroidX ConstraintLayout 2.0.4 -> 2.1.3
* AndroidX Lifecycle 2.2.0 -> 2.4.1
* AndroidX Navigation 2.3.3 -> 2.4.2
* Google Material 1.2.1 -> 1.5.0
* ThreeTenABP 1.3.0 -> 1.4.0
* AndroidX TestCore 1.3.0 -> 1.4.0
* AndroidX Test 1.3.0 -> 1.4.0
* AndroidX Test Orchestrator 1.4.0 -> 1.4.1
* AndroidX Espresso 3.3.0 -> 3.4.0
* AndroidX Test ExtJunit 1.1.2 -> 1.1.3
* OkHttp 4.8.1 -> 4.9.3
* Gson 2.8.6 -> 2.8.9
* Dependency Updates Gradle plugin 0.38.0 -> 0.41.0
* Gradle Download plugin 4.1.1 -> 4.1.2
* Spotless 5.10.2 -> 6.5.1
* KtLint 0.41.0 -> 0.45.1
* AppAuth 0.10.0 -> 0.11.1
* Mockk 1.12.3 -> 1.12.4

=== Migration