@@ -240,6 +240,7 @@ dependencies {
     androidTestImplementation(Dependencies.Android.AndroidTest.mockk)
 
     androidTestImplementation(Dependencies.Android.AndroidTest.kakao)
+    androidTestImplementation(Dependencies.Android.AndroidTest.kakaoCompose)
 
     androidTestImplementation(Dependencies.Android.AndroidTest.androidXTestComposeUi)
 
