@@ -33,6 +33,7 @@ toc::[]
 
 * Change GitHub action from self-hosted runner to cloud runner
 * Change Android target API from 30 to 31
+* Change UI tests from Kakao to Kakao Compose
 
 === Deprecated
 
